<resources>
    <string name="app_name">Painel Social</string>

    <string name="menu">Menu</string>

    <string name="action_refresh">Atualizar</string>
    <string name="action_add">Adicionar</string>

    <string name="title_activity_new_request">Nova Reclamação</string>
    <string name="take_picture">Tirar Foto</string>
    <string name="select_picture">Selecionar Foto</string>
    <string name="send_request">Enviar</string>

    <string name="title_activity_view_request">Ver Reclamação</string>

    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Login / Cadastro</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="google_maps_key">AIzaSyAzE-mW-aUkvIjFp5tEV13xKuLb5fYfwfk</string>

    <string name="action_settings">Settings</string>

</resources>
