<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.painelsocial.NewRequestActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin" >

            <FrameLayout
                android:id="@+id/previewMap"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>

            <TextView
                android:id="@+id/addressInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                android:layout_marginTop="15dp"/>

            <EditText android:id="@+id/inputDescription"
                android:inputType="textMultiLine"
                android:lines="5"
                android:gravity="top|left"
                android:maxLines="10"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/button_material_light">

                <LinearLayout
                    android:id="@+id/previewPictures"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:orientation="horizontal"/>

            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">

                <Button
                    android:id="@+id/takePictureButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/take_picture"/>

                <Button
                    android:id="@+id/selectPictureButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/select_picture"/>

            </LinearLayout>

            <Button
                android:id="@+id/sendRequest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_request"
                android:layout_marginTop="15dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
